--- a/css/main.css
+++ b/css/main.css
@@ -78,6 +78,11 @@ body {
 
 }
 
+.hidden {
+    display: none;
+    visibility: hidden;
+}
+
 
 
 /***********************************************************************/
@@ -162,37 +167,6 @@ body {
     width: 100%;
     height: 800px;
 }
-
-.hero-box .right-box .bio-box {
-    background: #ffffff;
-    color: #1c1c1c;
-    text-align: left;
-    height: 250px;
-    padding: 2rem 3rem;
-}
-
-.hero-box .right-box .bio-box h2 {
-    font-family: 'Open Sans', sans-serif;
-    font-size: 32px;
-    font-weight: 600;
-    margin: 1rem 0rem;
-}
-
-
-.hero-box .right-box .bio-box h3 {
-    font-family: 'Open Sans', sans-serif;
-    font-size: 14px;
-    font-weight: 500;
-    margin: 1rem 0rem;
-}
-
-
-.hero-box .right-box .bio-box p {
-    font-family: 'Open Sans', sans-serif;
-    line-height: 28px;
-    text-align: justify;
-}
-
 
 
 .hero-box .right-box .text-box {
@@ -612,14 +586,9 @@ footer {
     }
 
 
-    .hero-box .right-box .bio-box {
-        padding: 1.2rem 1.4rem;
-    }
-
-
     .hero-box .right-box .text-box .box-1 {
         text-align: center;
-        padding: 2.5rem 1rem;
+        padding: 6.5rem 1rem;
     }
 
     .hero-box .right-box .text-box .box-1 p {
@@ -632,8 +601,12 @@ footer {
     }
 
     .hero-box .right-box .text-box {
-        height: 350px;
+        height: 600px;
     }
+
+    .navbar  .navbar-toggle.navbar-toggler .icon-bar{
+        background-color:black !important;
+     }
 
     #featured-properties {
         background: #ffffff;
@@ -658,7 +631,7 @@ footer {
 
     #featured-properties .property-box .text-box {
         background: #ffffff;
-        padding: 1.2rem;
+        padding: 1.5rem;
         height: 350px;
     }
 
@@ -704,6 +677,40 @@ footer {
         line-height: 30px;
     }
 
+    .MLS-box p {
+        font-family: 'Lato', sans-serif;
+        font-size: 17px;
+        line-height: 32px;
+        color: #ffffff;
+        margin-bottom: 3rem;
+    }
+
+    .links {
+        padding-top: 3rem;
+        margin-bottom: 2rem;
+        padding-left: 0;
+    }
+
+    .social-links {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 0;
+    }
+
+    .navbar-nav .nav-item .nav-link {
+        color: #ffffff;
+        font-size: 1rem;
+        font-family: 'Open Sans', sans-serif;
+        text-align: center;
+        transition: all .2s ease-in-out;
+    }
+
+    .navbar-nav .nav-item .nav-link:hover {
+      background: #ffffff3d;
+    }
+
+
     
 }
 
@@ -714,20 +721,6 @@ footer {
     .hero-box {
         height: 600px;
     }
-
-    .hero-box .right-box .bio-box {
-        height: 250px;
-        padding: 0.8rem 0.8rem;
-    }
-
-    .hero-box .right-box .bio-box h2 {
-        font-size: 24px;
-    }
-
-    .hero-box .right-box .bio-box h3 {
-        font-size: 12px;
-    }
-
 
     .hero-box .right-box .text-box .box-1 {
         text-align: center;
@@ -752,11 +745,6 @@ footer {
         height: 530px;
     }
 
-    .hero-box .right-box .bio-box p {
-        font-size: 14px;
-        line-height: 23px;
-     
-    }
 
     .hero-box .right-box .text-box {
         height: 350px;
@@ -853,6 +841,10 @@ footer {
 
 @media screen and (max-width: 500px) {
 
+    #hero {
+        height: 860px;
+    }
+
     .hero-box {
         display: grid;
         grid-template-columns: repeat(1, 1fr);
@@ -860,8 +852,6 @@ footer {
         height: 1000px;
         z-index:999;
     }
-
-    
 
     .hero-box .left-box {
         max-width: 100%;
@@ -874,23 +864,10 @@ footer {
     }
        
 
-    .hero-box .right-box .bio-box {
-        height: 180px;
-        padding: 0.8rem 0.8rem;
-    }
-
-    .hero-box .right-box .bio-box h2 {
-        font-size: 22px;
-    }
-
-    .hero-box .right-box .bio-box h3 {
-        font-size: 12px;
-    }
-
-
     .hero-box .right-box .text-box .box-1 {
         text-align: center;
-        padding: 1.2rem 1rem;
+        padding: 1rem 1rem;
+        
         
     }
 
@@ -915,12 +892,7 @@ footer {
 
     .hero-box .left-box img {
         width: 100%;
-        height: 570px;
-    }
-
-    .hero-box .right-box .bio-box p {
-        font-size: 14px;
-        line-height: 20px;
+        height: 600px;
     }
 
     .hero-box .right-box .text-box {
@@ -929,7 +901,7 @@ footer {
 
     #featured-properties {
         background: #ffffff;
-        height: 600px;
+        height: 660px;
         text-align: center;
     }
 
@@ -957,7 +929,7 @@ footer {
     }
 
     #featured-properties .property-box .text-box .box-1 h2 {
-        font-size: 22px;
+        font-size: 23px;
     }
 
 
@@ -973,7 +945,7 @@ footer {
     }
 
     #featured-properties .property-box .text-box .box-1 p {
-        font-size: 12px;
+        font-size: 13px;
         line-height: 20px;
     }
 
@@ -1013,15 +985,22 @@ footer {
         height: 228px;
     }
 
+    
+
     .swiper-container-horizontal>.swiper-pagination-bullets, .swiper-pagination-custom, .swiper-pagination-fraction {
         bottom: 0px;
         left: 0;
         width: 100%;
     }
 
+    .MLS-box p {
+        font-size: 16px;
+        line-height: 32px;
+    }
+
     #contact {
         width: 100%;
-        height: 700px;
+        height: 660px;
         margin-bottom: 2rem;
         text-align: right;
     }
@@ -1037,10 +1016,23 @@ footer {
     .input-box {
         margin-left: 0rem;
     }
+
     .message-box {
         margin-right: 0rem;
     }
 
+    .links {
+        padding-top: 3rem;
+        margin-bottom: 2rem;
+        padding-left: 0;
+    }
+
+    .social-links {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 0;
+    }
 
 }
 
@@ -1059,27 +1051,13 @@ footer {
 
     .hero-box .left-box {
         max-width: 100%;
-        height: 460px;
+        height: 450px;
     }
        
 
-    .hero-box .right-box .bio-box {
-        height: 210px;
-        padding: 0.8rem 0.8rem;
-    }
-
-    .hero-box .right-box .bio-box h2 {
-        font-size: 22px;
-    }
-
-    .hero-box .right-box .bio-box h3 {
-        font-size: 12px;
-    }
-
-
     .hero-box .right-box .text-box .box-1 {
         text-align: center;
-        padding: 1.2rem 1rem;
+        padding: 3rem 1rem 0rem 1rem;
         
     }
 
@@ -1107,13 +1085,9 @@ footer {
         height: 450px;
     }
 
-    .hero-box .right-box .bio-box p {
-        font-size: 14px;
-        line-height: 20px;
-    }
 
     .hero-box .right-box .text-box {
-        height: 260px;
+        height: 345px;
     }
 
     #featured-properties {
@@ -1141,7 +1115,7 @@ footer {
     #featured-properties .property-box .text-box {
         background: #ffffff;
         padding: 1.2rem;
-        height: 278px;
+        height: 320px;
     }
 
     #featured-properties .property-box .text-box .box-1 h2 {
@@ -1176,18 +1150,22 @@ footer {
         background-position: center center;
         background-size: cover;
         background-repeat: no-repeat;
-        height: 450px;
+        height: 380px;
     }
 
     .MLS-box {
         padding: 3rem 1rem;
     }
 
+    .title-box h2 {
+        font-size: 2.3rem;
+    }
+
     .swiper-slide p {
         font-family: 'Lato', sans-serif;
         font-size: 1rem;
         padding: 0rem 1.2rem;
-        line-height: 30px;
+        line-height: 26px;
     }
 
     .MLS-box p {
@@ -1200,7 +1178,7 @@ footer {
 
     .swiper-slide {
         width: 476px;
-        height: 160px;
+        height: 180px;
     }
 
     .swiper-container {
@@ -1212,6 +1190,19 @@ footer {
         bottom: 0px;
         left: 0;
         width: 100%;
+    }
+
+    .links {
+        padding-top: 3rem;
+        margin-bottom: 2rem;
+        padding-left: 0;
+    }
+
+    .social-links {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 0;
     }
 
 }
